{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "UI",
            "id": "abb565b5-0a63-40ec-87bc-7b9532c2ef1e",
            "actions": [
                {
                    "name": "ToggleInventory",
                    "type": "Button",
                    "id": "146a496c-c427-4e85-83dd-9415c7dc457a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectItem",
                    "type": "Button",
                    "id": "92a9ec98-9656-4613-9f77-331bbfda4c71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "2d64996c-e36b-47e3-a1d7-b35a3966753c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HotBarScroll",
                    "type": "Value",
                    "id": "6895775d-2b7c-43b5-9fd9-97e20f64832c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleConsole",
                    "type": "Button",
                    "id": "f404d028-4bf1-44ef-8df6-49b941380196",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "ec6e009d-266e-4691-9501-7f025760e5ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ebfcb152-b74d-4ea8-8f60-503b424a7776",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ToggleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dfe20a6-a97d-4879-90e5-e37cf510114f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f7d1a29-afa4-4e29-b55e-61e8cc38a87f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90c19f3a-a4b2-48bf-8fae-e6b17d5b6899",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HotBarScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "688c1fa7-13d3-408d-b3f0-839d0a09e5b1",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ToggleConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bd71583-1783-44b0-93e1-ebfd78e737e3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Movement",
            "id": "db86c3c3-b1d9-41fe-ba75-9b75c89345be",
            "actions": [
                {
                    "name": "MoveHorizontaly",
                    "type": "Value",
                    "id": "06ee7a22-6041-41a7-a049-a54f61f81271",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "IncreaseSpeed",
                    "type": "Button",
                    "id": "7dd3712a-f9bc-4e37-9a27-1f9add39e570",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveVerticly",
                    "type": "Value",
                    "id": "c693f134-ec57-4392-9755-f32dab42fd9b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "3f678e02-a9fe-45f0-80f3-2d5ce7cd2cff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "18ccf4ae-49ef-4350-9fd3-b8f9becfdea0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontaly",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e75b10dc-d3eb-4753-a4d6-87c1f669ac9d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveHorizontaly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2aefee1b-ad54-42bd-9f33-10be7dd82215",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveHorizontaly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6c604e26-74e5-4c99-b0de-2fd86c5f3138",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveHorizontaly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e370845b-7aa1-4adc-9d33-e94181515b9c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveHorizontaly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fb77d8eb-aaa0-4a98-b0ae-0b22fc0f27d1",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveHorizontaly",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e973d5da-4b85-4995-bb58-f656fa59caa9",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "IncreaseSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b11b7c1f-a20b-4e81-b34f-725d93ef3109",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "IncreaseSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "25c8078e-2c27-4b21-afff-e70477909f88",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVerticly",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "aca8ad7f-1f88-4c4a-a471-5edc9cabbf29",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveVerticly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c93376f3-426a-41a4-96a9-b9056df35692",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveVerticly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a31e7945-83e7-4f20-bdc3-ceb4d53d118c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "61833e12-715e-4aff-abe8-c5c9b2fe172d",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Button",
                    "id": "fba6f3be-544c-4511-b72d-0f05381f31db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartRotating",
                    "type": "Button",
                    "id": "da9b422d-2496-4763-aa44-9dce30fd499b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "997e6cc3-9030-4b20-a4ce-9af40d67c68d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fec333c-1d8c-400e-94ac-b3c47f0a2486",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "StartRotating",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "4ce555a2-4e6f-45f6-a0eb-cb64da7d2254",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "1345d0d2-38c7-44c5-9e05-448aaeba7b9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2e14083b-ae2c-44f2-a3df-9e43b600dcfe",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "16832413-d93a-4b24-8daa-48fe5f1ed582",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "550e1a0d-0e23-4a7c-a5a3-4e398a3bcdd1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate Building",
                    "type": "Button",
                    "id": "e5f35d28-d717-4a85-b1d3-660263d13a3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "928d50d7-3ef3-494b-b9c6-884f42080e73",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c7f4a03-f504-45b3-b138-0e2d37335964",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotate Building",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}